--- a/src/css/login.css
+++ b/src/css/login.css
@@ -62,33 +62,8 @@
   align-items: center;
   flex-direction: column;
 }
-.cover .right_cell .bottomArea .content .inputArea {
+.cover .right_cell .bottomArea .content .el-form {
   width: 100%;
-  height: 150px;
-  display: flex;
-  justify-content: space-around;
-  flex-direction: column;
-  align-items: center;
-}
-.cover .right_cell .bottomArea .content .inputArea .input {
-  width: 100%;
-  height: 40px;
-  line-height: 40px;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  flex-direction: row;
-}
-.cover .right_cell .bottomArea .content .inputArea .input .first {
-  display: block;
-  width: 80px;
-  height: 40px;
-  line-height: 40px;
-  text-align: left;
-  font-size: 16px;
-}
-.cover .right_cell .bottomArea .content .inputArea .input el-input {
-  width: calc(100% - 100px);
 }
 .cover .right_cell .bottomArea .content .loginBtn {
   width: 200px;
