--- a/src/css/login.less
+++ b/src/css/login.less
@@ -1,111 +1,86 @@
 .cover {
-    width: 100%;
-    height: 100%;
-    background-image: url("../assets/image/login_bg1.jpg");
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-    position: relative;
-    .right_cell {
-      width: calc(30% - 100px);
-      height: calc(50% - 60px);
-      border: 1px solid #ccc;
-      background-color: #f2f2f2;
-      position: absolute;
-      top: 50%;
-      right: 100px;
-      transform: translateY(-50%);
-      border-radius: 20px;
-      padding: 30px 50px;
-      .topBanner {
+  width: 100%;
+  height: 100%;
+  background-image: url("../assets/image/login_bg1.jpg");
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  position: relative;
+  .right_cell {
+    width: calc(30% - 100px);
+    height: calc(50% - 60px);
+    border: 1px solid #ccc;
+    background-color: #f2f2f2;
+    position: absolute;
+    top: 50%;
+    right: 100px;
+    transform: translateY(-50%);
+    border-radius: 20px;
+    padding: 30px 50px;
+    .topBanner {
+      width: 100%;
+      height: 60px;
+      line-height: 60px;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      flex-direction: row;
+      .bannerBtn {
+        font-size: 20px;
+        color: #8a8a8a;
+        cursor: pointer;
+        &.active {
+          color: #000;
+          position: relative;
+          &:after {
+            content: "";
+            width: 40px;
+            height: 2px;
+            border-radius: 1px;
+            background-color: #000;
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            animation: toshow 0.5s ease-in-out;
+          }
+        }
+      }
+    }
+    .bottomArea {
+      width: 100%;
+      height: calc(100% - 150px);
+      margin-top: 10%;
+      .content {
         width: 100%;
-        height: 60px;
-        line-height: 60px;
+        height: 100%;
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         align-items: center;
-        flex-direction: row;
-        .bannerBtn {
-          font-size: 20px;
-          color: #8a8a8a;
-          cursor: pointer;
-          &.active {
-            color: #000;
-            position: relative;
-            &:after {
-              content: "";
-              width: 40px;
-              height: 2px;
-              border-radius: 1px;
-              background-color: #000;
-              position: absolute;
-              bottom: 0;
-              left: 50%;
-              transform: translateX(-50%);
-              animation: toshow 0.5s ease-in-out;
-            }
-          }
-        }
-      }
-      .bottomArea {
-        width: 100%;
-        height: calc(100% - 150px);
-        margin-top: 10%;
-        .content {
+        flex-direction: column;
+        .el-form {
           width: 100%;
-          height: 100%;
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          flex-direction: column;
-          .inputArea {
-            width: 100%;
-            height: 150px;
-            display: flex;
-            justify-content: space-around;
-            flex-direction: column;
-            align-items: center;
-            .input {
-              width: 100%;
-              height: 40px;
-              line-height: 40px;
-              display: flex;
-              justify-content: flex-start;
-              align-items: center;
-              flex-direction: row;
-              .first {
-                display: block;
-                width: 80px;
-                height: 40px;
-                line-height: 40px;
-                text-align: left;
-                font-size: 16px;
-              }
-              el-input {
-                width: calc(100% - 100px);
-              }
-            }
-          }
-          .loginBtn {
-            width: 200px;
-            height: 50px;
-            line-height: 50px;
-            background-color: rgb(6, 107, 240);
-            border-radius: 20px;
-            color: #f2f2f2;
-            font-size: 20px;
-            text-align: center;
-            cursor: pointer;
-          }
+        }
+        .loginBtn {
+          width: 200px;
+          height: 50px;
+          line-height: 50px;
+          background-color: rgb(6, 107, 240);
+          border-radius: 20px;
+          color: #f2f2f2;
+          font-size: 20px;
+          text-align: center;
+          cursor: pointer;
         }
       }
     }
   }
-  @keyframes toshow {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
+}
+@keyframes toshow {
+  0% {
+    opacity: 0;
   }
+  100% {
+    opacity: 1;
+  }
+}
