详情页开始

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -131,6 +131,7 @@
   color: #000;
   border-radius: 5px;
   font-weight: 400;
+  animation: show 0.5s ease-in-out;
   cursor: pointer;
 }
 .homecover .slideBar .leftArea .leftItem:hover {
@@ -170,11 +171,11 @@
   align-items: center;
   flex-direction: column;
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
-  animation: all 0.5s linear;
   cursor: pointer;
 }
 .homecover .slideBar .rightArea .itemCover .itemDetail:hover {
-  box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.4);
+  animation: show 0.3s ease-in-out;
+  animation-fill-mode: forwards;
 }
 .homecover .slideBar .rightArea .itemCover .itemDetail .itemImage {
   width: 100%;
@@ -226,12 +227,218 @@
   transform: translate(-50%, -50%);
 }
 .homecover .recommend {
+  width: calc(100% - 40px);
+  background-color: #fff;
+  padding: 10px 20px;
+}
+.homecover .recommend .recommend_title {
+  display: block;
+  width: 100px;
+  height: 30px;
+  font-size: 20px;
+  color: #000;
+  border-bottom: 2px solid #000;
+  border-radius: 1px;
+}
+.homecover .recommend .recomment_content {
   width: 100%;
-  height: 500px;
-  background-color: #f2f2f2;
+  height: 400px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+}
+.homecover .recommend .recomment_content .item_cover {
+  width: 100%;
+  height: 180px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  border-radius: 20px;
+}
+.homecover .recommend .recomment_content .item_cover .item_type {
+  width: 100px;
+  height: 180px;
+  line-height: 180px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 30px;
+  color: #000;
+  text-shadow: 0 2px 2px #fab700;
+}
+.homecover .recommend .recomment_content .item_cover .item_content {
+  width: 200px;
+  height: 180px;
+  border: 1px solid #ccc;
+  box-shadow: 0 4px 4px #ccc;
+  border-radius: 20px;
+}
+.homecover .recommend .recomment_content .item_cover .item_content:hover {
+  animation: show 0.3s ease-in-out;
+  animation-fill-mode: forwards;
+}
+.homecover .recommend .recomment_content .item_cover .item_content .item_image {
+  width: 100%;
+  height: 120px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.homecover .recommend .recomment_content .item_cover .item_content .recomment_name {
+  display: block;
+  width: 100%;
+  height: 20px;
+  line-height: 20px;
+  font-size: 16px;
+  color: #aaa;
+  text-align: center;
+}
+.homecover .recommend .recomment_content .item_cover .item_content .recomment_price {
+  display: block;
+  width: 100%;
+  height: 40px;
+  font-size: 22px;
+  line-height: 40px;
+  color: #ff0000;
+  font-weight: bold;
+  text-align: center;
+}
+.homecover .recommend .shoes .AJ1 {
+  width: 100%;
+  height: 180px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+}
+.homecover .recommend .shoes .AJ1 .AJ1_item {
+  width: 18%;
+  height: 100%;
+  border: 1px solid #ccc;
 }
 .homecover .footer {
   width: 100%;
-  height: 300px;
-  background-color: #522b2b;
+  padding: 20px 0;
+  background-color: #fff;
+  overflow: hidden;
+}
+.homecover .footer .JD_banner {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  align-content: center;
+  flex-direction: row;
+  margin: 10px 0;
+}
+.homecover .footer .JD_banner li {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: row;
+  height: 50px;
+  line-height: 50px;
+}
+.homecover .footer .JD_banner li .icon_JD {
+  width: 36px;
+  height: 42px;
+}
+.homecover .footer .JD_banner li .icon_JD.one {
+  background-image: url("../assets/image/jd1.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+.homecover .footer .JD_banner li .icon_JD.two {
+  background-image: url("../assets/image/jd2.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+.homecover .footer .JD_banner li .icon_JD.three {
+  background-image: url("../assets/image/jd3.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+.homecover .footer .JD_banner li .icon_JD.four {
+  background-image: url("../assets/image/jd4.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+.homecover .footer .JD_banner li .text_JD {
+  margin-left: 10px;
+  height: 50px;
+  font-size: 22px;
+  color: #000;
+  font-weight: bold;
+}
+.homecover .footer .bottomPart {
+  width: 100%;
+  border-top: 1px solid #ccc;
+}
+.homecover .footer .bottomPart .bottom_list {
+  width: calc(100% - 60px);
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  height: 30px;
+  padding: 10px 30px;
+}
+.homecover .footer .bottomPart .bottom_list li {
+  font-size: 12px;
+  color: #ccc;
+}
+.homecover .footer .bottomPart .bottom_list li:hover {
+  color: #ff0000;
+  cursor: pointer;
+}
+.homecover .footer .bottomPart .bottom_list i {
+  width: 1px;
+  height: 16px;
+  background-color: #ccc;
+}
+.homecover .footer .bottomPart .bottom_list2 {
+  width: calc(100% - 60px);
+  list-style: none;
+  margin: 10px 0 0 0 ;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 30px;
+  padding: 10px 30px;
+}
+.homecover .footer .bottomPart .bottom_list2 li {
+  width: 100%;
+  height: 20px;
+  margin-bottom: 5px;
+}
+.homecover .footer .bottomPart .bottom_list2 li span {
+  display: inline-block;
+  font-size: 12px;
+  color: #ccc;
+  padding: 0 10px;
+  border-right: 1px solid #CCC;
+  cursor: pointer;
+}
+.homecover .footer .bottomPart .bottom_list2 li span:hover {
+  color: #ff0000;
+}
+.homecover .footer .bottomPart .bottom_list2 li span:last-child {
+  border: 0;
+}
+@keyframes show {
+  0% {
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
+  }
+  100% {
+    transform: translateY(2px);
+    box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.4);
+  }
 }
