--- a/src/css/home.less
+++ b/src/css/home.less
@@ -1,237 +1,449 @@
 .homecover {
-    width: calc(100% - 600px);
-    padding: 100px 300px 0;
-    background-image: linear-gradient(to bottom, rgb(1, 13, 49), rgb(22, 3, 133));
+  width: calc(100% - 600px);
+  padding: 100px 300px 0;
+  background-image: linear-gradient(to bottom, rgb(1, 13, 49), rgb(22, 3, 133));
+  position: relative;
+  .header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background-color: #f5f5f5;
+    background-image: url("../assets/image/home_bg.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+  .topBanner {
+    width: 100%;
+    height: 80px;
+    background-color: #f5f5f5;
     position: relative;
-    .header {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100px;
-      background-color: #f5f5f5;
-      background-image: url("../assets/image/home_bg.jpg");
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: contain;
-    }
-    .topBanner {
-      width: 100%;
+    .logo {
+      width: 14%;
       height: 80px;
-      background-color: #f5f5f5;
-      position: relative;
-      .logo {
-        width: 14%;
-        height: 80px;
-        display: inline-block;
-        background-image: url("../assets/image/logo1.png");
-        background-size: 100%;
-        background-repeat: no-repeat;
-        background-position: center center;
-        position: absolute;
-        left: 0;
-        top: 0;
+      display: inline-block;
+      background-image: url("../assets/image/logo1.png");
+      background-size: 100%;
+      background-repeat: no-repeat;
+      background-position: center center;
+      position: absolute;
+      left: 0;
+      top: 0;
+    }
+    .searchArea {
+      width: 500px;
+      height: 100%;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      flex-direction: column;
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      .searchInput {
+        width: 100%;
+        height: 40%;
       }
-      .searchArea {
-        width: 500px;
-        height: 100%;
+      .hotKey {
+        width: 100%;
+        height: 40%;
         display: flex;
-        justify-content: space-around;
+        justify-content: flex-start;
         align-items: center;
-        flex-direction: column;
-        position: absolute;
-        left: 50%;
-        transform: translateX(-50%);
-        .searchInput {
-          width: 100%;
-          height: 40%;
+        flex-direction: row;
+        .hotHead {
+          display: inline-block;
+          color: #ff0000;
+          font-weight: 400;
+          font-size: 12px;
         }
-        .hotKey {
-          width: 100%;
-          height: 40%;
-          display: flex;
-          justify-content: flex-start;
-          align-items: center;
-          flex-direction: row;
-          .hotHead {
+        .hotList {
+          list-style: none;
+          margin: 0;
+          padding: 0;
+          li {
             display: inline-block;
-            color: #ff0000;
-            font-weight: 400;
             font-size: 12px;
-          }
-          .hotList {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            li {
-              display: inline-block;
-              font-size: 12px;
-              margin-right: 15px;
-              cursor: pointer;
-              &:hover {
-                color: rgb(255, 0, 0);
-              }
+            margin-right: 15px;
+            cursor: pointer;
+            &:hover {
+              color: rgb(255, 0, 0);
             }
           }
         }
       }
-      .personInfo {
-        width: 14%;
-        height: 100%;
-        position: absolute;
-        right: 0;
-        top: 0;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        flex-direction: column;
-        .userHead {
-          display: block;
-          width: 30%;
-          height: 60%;
-          background-image: url("../assets/image/userHead.png");
-          background-size: contain;
-          background-position: center;
-          background-repeat: no-repeat;
-        }
-        .userTips {
-          font-size: 14px;
-          color: #a2a2a2;
-          font-weight: 400;
-        }
+    }
+    .personInfo {
+      width: 14%;
+      height: 100%;
+      position: absolute;
+      right: 0;
+      top: 0;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      flex-direction: column;
+      .userHead {
+        display: block;
+        width: 30%;
+        height: 60%;
+        background-image: url("../assets/image/userHead.png");
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+      }
+      .userTips {
+        font-size: 14px;
+        color: #a2a2a2;
+        font-weight: 400;
       }
     }
-    .slideBar {
-      width: 100%;
-      height: 600px;
+  }
+  .slideBar {
+    width: 100%;
+    height: 600px;
+    background-color: #fff;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: row;
+    .leftArea {
+      width: 200px;
+      height: 100%;
       background-color: #fff;
       display: flex;
       justify-content: flex-start;
+      flex-direction: column;
       align-items: center;
-      flex-direction: row;
-      .leftArea {
-        width: 200px;
-        height: 100%;
+      .leftItem {
+        width: calc(100% - 2px);
+        height: 50px;
+        line-height: 50px;
+        font-size: 16px;
+        text-align: center;
+        border: 1px solid #f1f1f1;
         background-color: #fff;
+        color: #000;
+        border-radius: 5px;
+        font-weight: 400;
+        animation: show 0.5s ease-in-out;
+        cursor: pointer;
+        &:hover {
+          background-color: #aaaaaa;
+          color: #fff;
+        }
+        &.active {
+          background-color: #868585;
+          color: #fff;
+        }
+      }
+    }
+    .rightArea {
+      width: calc(100% - 200px);
+      height: calc(100% - 2px);
+      border: 1px solid #ccc;
+      display: flex;
+      justify-content: space-between;
+      flex-direction: column;
+      align-items: center;
+      .itemCover {
+        width: 100%;
+        height: 90%;
         display: flex;
-        justify-content: flex-start;
-        flex-direction: column;
+        justify-content: space-around;
         align-items: center;
-        .leftItem {
-          width: calc(100% - 2px);
-          height: 50px;
-          line-height: 50px;
-          font-size: 16px;
-          text-align: center;
-          border: 1px solid #f1f1f1;
+        flex-direction: row;
+        flex-wrap: wrap;
+        .itemDetail {
+          width: 22%;
+          height: 150px;
+          border: 1px solid #ccc;
           background-color: #fff;
-          color: #000;
-          border-radius: 5px;
-          font-weight: 400;
+          border-radius: 10px;
+          display: flex;
+          justify-content: flex-start;
+          align-items: center;
+          flex-direction: column;
+          box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
           cursor: pointer;
           &:hover {
-            background-color: #aaaaaa;
-            color: #fff;
+            animation: show 0.3s ease-in-out;
+            animation-fill-mode: forwards;
           }
-          &.active {
-            background-color: #868585;
-            color: #fff;
-          }
-        }
-      }
-      .rightArea {
-        width: calc(100% - 200px);
-        height: calc(100% - 2px);
-        border: 1px solid #ccc;
-        display: flex;
-        justify-content: space-between;
-        flex-direction: column;
-        align-items: center;
-        .itemCover {
-          width: 100%;
-          height: 90%;
-          display: flex;
-          justify-content: space-around;
-          align-items: center;
-          flex-direction: row;
-          flex-wrap: wrap;
-          .itemDetail {
-            width: 22%;
-            height: 150px;
-            border: 1px solid #ccc;
+          .itemImage {
+            width: 100%;
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center;
+            height: 100px;
             background-color: #fff;
-            border-radius: 10px;
+            border-radius: 10px 10px 0 0;
+          }
+          .itemIntro {
+            width: calc(100% - 20px);
+            height: 50px;
             display: flex;
             justify-content: flex-start;
-            align-items: center;
+            align-items: left;
             flex-direction: column;
-            box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
-            animation: all 0.5s linear;
-            cursor: pointer;
-            &:hover {
-              box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.4);
-            }
-            .itemImage {
+            padding: 0 10px;
+            .itemText {
               width: 100%;
-              background-size: contain;
-              background-repeat: no-repeat;
-              background-position: center;
-              height: 100px;
-              background-color: #fff;
-              border-radius: 10px 10px 0 0;
+              height: 20px;
+              line-height: 20px;
+              font-size: 12px;
+              color: #a2a2a2;
+              text-align: left;
+              white-space: nowrap;
+              overflow: hidden;
+              text-overflow: ellipsis;
             }
-            .itemIntro {
-              width: calc(100% - 20px);
-              height: 50px;
-              display: flex;
-              justify-content: flex-start;
-              align-items: left;
-              flex-direction: column;
-              padding: 0 10px;
-              .itemText {
-                width: 100%;
-                height: 20px;
-                line-height: 20px;
-                font-size: 12px;
-                color: #a2a2a2;
-                text-align: left;
-                white-space: nowrap;
-                overflow: hidden;
-                text-overflow: ellipsis;
-              }
-              .itemPrice {
-                width: 100%;
-                height: 30px;
-                line-height: 30px;
-                font-size: 20px;
-                color: #ff0000;
-                font-weight: 100;
-                text-align: left;
-              }
+            .itemPrice {
+              width: 100%;
+              height: 30px;
+              line-height: 30px;
+              font-size: 20px;
+              color: #ff0000;
+              font-weight: 100;
+              text-align: left;
             }
           }
         }
-        .paging {
-          width: 100%;
-          height: 10%;
-          position: relative;
-          .el-pagination {
-            position: absolute;
-            left: 50%;
-            top:50%;
-            transform: translate(-50%,-50%);
+      }
+      .paging {
+        width: 100%;
+        height: 10%;
+        position: relative;
+        .el-pagination {
+          position: absolute;
+          left: 50%;
+          top: 50%;
+          transform: translate(-50%, -50%);
+        }
+      }
+    }
+  }
+  .recommend {
+    width: calc(100% - 40px);
+    background-color: #fff;
+    padding: 10px 20px;
+    .recommend_title {
+      display: block;
+      width: 100px;
+      height: 30px;
+      font-size: 20px;
+      color: #000;
+      border-bottom: 2px solid #000;
+      border-radius: 1px;
+    }
+    .recomment_content {
+      width: 100%;
+      height: 400px;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      flex-direction: column;
+      .item_cover {
+        width: 100%;
+        height: 180px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: row;
+        border-radius: 20px;
+        .item_type {
+          width: 100px;
+          height: 180px;
+          line-height: 180px;
+          text-align: center;
+          font-weight: bold;
+          font-size: 30px;
+          color: #000;
+          text-shadow: 0 2px 2px rgb(250, 183, 0);
+        }
+        .item_content {
+          width: 200px;
+          height: 180px;
+          border: 1px solid #ccc;
+          box-shadow: 0 4px 4px #ccc;
+          border-radius: 20px;
+          &:hover {
+            animation: show 0.3s ease-in-out;
+            animation-fill-mode: forwards;
+          }
+          .item_image {
+            width: 100%;
+            height: 120px;
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center;
+          }
+          .recomment_name {
+            display: block;
+            width: 100%;
+            height: 20px;
+            line-height: 20px;
+            font-size: 16px;
+            color: #aaa;
+            text-align: center;
+          }
+          .recomment_price {
+            display: block;
+            width: 100%;
+            height: 40px;
+            line-height: 40px;
+            font-size: 22px;
+            line-height: 40px;
+            color: #ff0000;
+            font-weight: bold;
+            text-align: center;
           }
         }
       }
     }
-    .recommend {
-      width: 100%;
-      height: 500px;
-      background-color: #f2f2f2;
-    }
-    .footer {
-      width: 100%;
-      height: 300px;
-      background-color: rgb(82, 43, 43);
+    .shoes {
+      .AJ1 {
+        width: 100%;
+        height: 180px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: row;
+        .AJ1_item {
+          width: 18%;
+          height: 100%;
+          border: 1px solid #ccc;
+        }
+      }
     }
   }
+  .footer {
+    width: 100%;
+    // height: 300px;
+    padding: 20px 0;
+    background-color: #fff;
+    overflow: hidden;
+    .JD_banner {
+      width: 100%;
+      padding: 0;
+      margin: 0;
+      list-style: none;
+      display: flex;
+      justify-content: space-around;
+      align-content: center;
+      flex-direction: row;
+      margin: 10px 0;
+      li {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        flex-direction: row;
+        height: 50px;
+        line-height: 50px;
+        .icon_JD {
+          width: 36px;
+          height: 42px;
+          &.one {
+            background-image: url("../assets/image/jd1.png");
+            background-size: 100%;
+            background-repeat: no-repeat;
+          }
+          &.two {
+            background-image: url("../assets/image/jd2.png");
+            background-size: 100%;
+            background-repeat: no-repeat;
+          }
+          &.three {
+            background-image: url("../assets/image/jd3.png");
+            background-size: 100%;
+            background-repeat: no-repeat;
+          }
+          &.four {
+            background-image: url("../assets/image/jd4.png");
+            background-size: 100%;
+            background-repeat: no-repeat;
+          }
+        }
+        .text_JD {
+          margin-left: 10px;
+          height: 50px;
+          font-size: 22px;
+          color: #000;
+          font-weight: bold;
+        }
+      }
+    }
+    .bottomPart {
+      width: 100%;
+      border-top: 1px solid #ccc;
+      .bottom_list {
+        width: calc(100% - 60px);
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        height: 30px;
+        padding: 10px 30px;
+        li {
+          font-size: 12px;
+          color: #ccc;
+          &:hover {
+            color: #ff0000;
+            cursor: pointer;
+          }
+        }
+        i {
+          width: 1px;
+          height: 16px;
+          background-color: #ccc;
+        }
+      }
+      .bottom_list2 {
+        width: calc(100% - 60px);
+        list-style: none;
+        margin: 10px 0 0 0 ;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 30px;
+        padding: 10px 30px;
+        li {
+          width: 100%;
+          height: 20px;
+          margin-bottom: 5px;
+          
+          span {
+            display: inline-block;
+            font-size: 12px;
+            color: #ccc;
+            padding: 0 10px;
+            border-right: 1px solid #CCC;
+            cursor: pointer;
+            &:hover {
+              color: #ff0000;
+            }
+            &:last-child {
+              border: 0;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+@keyframes show {
+  0% {
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
+  }
+  100% {
+    transform: translateY(2px);
+    box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.4);
+  }
+}
