--- a/src/css/home.less
+++ b/src/css/home.less
@@ -1,7 +1,11 @@
 .homecover {
-  width: calc(100% - 600px);
-  padding: 100px 300px 0;
-  background-image: linear-gradient(to bottom, rgb(1, 13, 49), rgb(22, 3, 133));
+  width: calc(100% - 400px);
+  padding: 100px 200px 0;
+  background-image: linear-gradient(
+    to bottom,
+    rgb(152, 177, 253),
+    rgb(220, 215, 247)
+  );
   position: relative;
   .header {
     position: absolute;
@@ -18,7 +22,7 @@
   .topBanner {
     width: 100%;
     height: 80px;
-    background-color: #f5f5f5;
+    background-color: #fff;
     position: relative;
     .logo {
       width: 14%;
@@ -104,11 +108,14 @@
   .slideBar {
     width: 100%;
     height: 600px;
+    padding-top:40px;
     background-color: #fff;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     flex-direction: row;
+    box-shadow: 0px 3px 10px rgb(31, 75, 207);
+    overflow: hidden;
     .leftArea {
       width: 200px;
       height: 100%;
@@ -233,10 +240,22 @@
       display: block;
       width: 100px;
       height: 30px;
-      font-size: 20px;
-      color: #000;
-      border-bottom: 2px solid #000;
+      font-size: 24px;
+      color: rgb(14, 13, 13);
       border-radius: 1px;
+      position: relative;
+      font-weight: bold;
+      margin: 30px 0;
+      &::after {
+        content: "";
+        width: 50px;
+        height: 2px;
+        background: rgb(243, 60, 60);
+        position: absolute;
+        bottom: -10px;
+        left: 50%;
+        transform: translateX(-50%);
+      }
     }
     .recomment_content {
       width: 100%;
@@ -254,7 +273,7 @@
         flex-direction: row;
         border-radius: 20px;
         .item_type {
-          width: 100px;
+          width: 160px;
           height: 180px;
           line-height: 180px;
           text-align: center;
@@ -264,7 +283,7 @@
           text-shadow: 0 2px 2px rgb(250, 183, 0);
         }
         .item_content {
-          width: 200px;
+          width: 20%;
           height: 180px;
           border: 1px solid #ccc;
           box-shadow: 0 4px 4px #ccc;
@@ -406,7 +425,7 @@
       .bottom_list2 {
         width: calc(100% - 60px);
         list-style: none;
-        margin: 10px 0 0 0 ;
+        margin: 10px 0 0 0;
         padding: 0;
         display: flex;
         flex-direction: column;
@@ -418,13 +437,13 @@
           width: 100%;
           height: 20px;
           margin-bottom: 5px;
-          
+
           span {
             display: inline-block;
             font-size: 12px;
             color: #ccc;
             padding: 0 10px;
-            border-right: 1px solid #CCC;
+            border-right: 1px solid #ccc;
             cursor: pointer;
             &:hover {
               color: #ff0000;
