--- a/src/css/home.less
+++ b/src/css/home.less
@@ -1,40 +1,39 @@
 .homecover {
-  width: calc(100% - 400px);
-  padding: 100px 200px 0;
-  background-image: linear-gradient(
-    to bottom,
-    rgb(152, 177, 253),
-    rgb(220, 215, 247)
-  );
+  width: 100%;
+  background-color: #fff;
   position: relative;
   .header {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
+    width: calc(100% - 400px);
     height: 100px;
-    background-color: #f5f5f5;
-    background-image: url("../assets/image/home_bg.jpg");
+    padding: 0 200px;
+    background-color: #000000;
+    background-image: url("../assets/image/logo4.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
   }
   .topBanner {
-    width: 100%;
+    width: calc(100% - 400px);
+    padding: 0 200px;
     height: 80px;
-    background-color: #fff;
+    background-color: rgb(0, 0, 0);
     position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    color: #fff;
     .logo {
       width: 14%;
       height: 80px;
       display: inline-block;
-      background-image: url("../assets/image/logo1.png");
-      background-size: 100%;
+      background-image: url("../assets/image/logo4.png");
+      background-size: contain;
       background-repeat: no-repeat;
-      background-position: center center;
-      position: absolute;
-      left: 0;
-      top: 0;
+      background-position: left;
     }
     .searchArea {
       width: 500px;
@@ -43,9 +42,6 @@
       justify-content: space-around;
       align-items: center;
       flex-direction: column;
-      position: absolute;
-      left: 50%;
-      transform: translateX(-50%);
       .searchInput {
         width: 100%;
         height: 40%;
@@ -79,92 +75,103 @@
         }
       }
     }
-    .personInfo {
-      width: 14%;
+    .banner_right {
+      width: 10%;
       height: 100%;
-      position: absolute;
-      right: 0;
-      top: 0;
       display: flex;
-      justify-content: space-around;
+      justify-content: flex-start;
+      flex-direction: row;
       align-items: center;
-      flex-direction: column;
-      .userHead {
-        display: block;
-        width: 30%;
-        height: 60%;
-        background-image: url("../assets/image/userHead.png");
-        background-size: contain;
-        background-position: center;
-        background-repeat: no-repeat;
+      .personInfo {
+        width: 50%;
+        height: 50%;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        flex-direction: column;
+        cursor: pointer;
+        .userHead {
+          display: block;
+          width: 100%;
+          height: 100%;
+          background-image: url("../assets/image/user_white.png");
+          background-size: contain;
+          background-position: center;
+          background-repeat: no-repeat;
+        }
+        .userTips {
+          font-size: 14px;
+          color: #a2a2a2;
+          font-weight: 400;
+        }
       }
-      .userTips {
-        font-size: 14px;
-        color: #a2a2a2;
-        font-weight: 400;
+      .to_shopCar {
+        width: 50%;
+        height: 50%;
+        background-image: url("../assets/image/shop_index.png");
+        background-position: center;
+        background-size: contain;
+        background-repeat: no-repeat;
+        cursor: pointer;
       }
     }
   }
   .slideBar {
-    width: 100%;
-    height: 600px;
-    padding-top:40px;
+    width: calc(100% - 400px);
+    padding: 0 200px;
     background-color: #fff;
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    flex-direction: row;
-    box-shadow: 0px 3px 10px rgb(31, 75, 207);
+    flex-direction: column;
     overflow: hidden;
     .leftArea {
-      width: 200px;
-      height: 100%;
-      background-color: #fff;
+      width: 100%;
+      height: 50px;
+      padding: 0 0 0;
+      background-color: rgb(255, 255, 255);
       display: flex;
-      justify-content: flex-start;
-      flex-direction: column;
+      justify-content: space-between;
+      flex-direction: row;
       align-items: center;
       .leftItem {
-        width: calc(100% - 2px);
+        width: 100%;
         height: 50px;
         line-height: 50px;
         font-size: 16px;
         text-align: center;
-        border: 1px solid #f1f1f1;
         background-color: #fff;
         color: #000;
-        border-radius: 5px;
         font-weight: 400;
         animation: show 0.5s ease-in-out;
         cursor: pointer;
         &:hover {
-          background-color: #aaaaaa;
+          background-color: #818181;
           color: #fff;
         }
         &.active {
-          background-color: #868585;
+          background-color: #000000;
           color: #fff;
         }
       }
     }
     .rightArea {
-      width: calc(100% - 200px);
-      height: calc(100% - 2px);
-      border: 1px solid #ccc;
+      width: calc(100% - 2px);
+      border: 1px solid #aaa;
       display: flex;
+      flex-flow: row wrap;
       justify-content: space-between;
-      flex-direction: column;
       align-items: center;
       .itemCover {
         width: 100%;
-        height: 90%;
         display: flex;
-        justify-content: space-around;
-        align-items: center;
-        flex-direction: row;
-        flex-wrap: wrap;
+        flex-flow: row wrap;
+        justify-content: flex-start;
+        align-items: flex-start;
+        font-size: 0;
         .itemDetail {
-          width: 22%;
+          width: calc(21% - 2px);
+          margin: 20px 2%;
           height: 150px;
           border: 1px solid #ccc;
           background-color: #fff;
@@ -221,7 +228,7 @@
       }
       .paging {
         width: 100%;
-        height: 10%;
+        height: 50px;
         position: relative;
         .el-pagination {
           position: absolute;
@@ -233,28 +240,41 @@
     }
   }
   .recommend {
-    width: calc(100% - 40px);
+    width: calc(100% - 400px);
     background-color: #fff;
-    padding: 10px 20px;
+    padding: 10px 200px 50px;
+    position: relative;
     .recommend_title {
       display: block;
-      width: 100px;
+      width: 100%;
+      text-align: center;
       height: 30px;
+      line-height: 30px;
       font-size: 24px;
       color: rgb(14, 13, 13);
       border-radius: 1px;
       position: relative;
       font-weight: bold;
-      margin: 30px 0;
+      margin: 50px 0;
       &::after {
         content: "";
-        width: 50px;
+        width: 45%;
         height: 2px;
-        background: rgb(243, 60, 60);
+        background: #000;
         position: absolute;
-        bottom: -10px;
-        left: 50%;
-        transform: translateX(-50%);
+        top: 50%;
+        left: 0;
+        transform: translateY(-50%);
+      }
+      &::before {
+        content: "";
+        width: 45%;
+        height: 2px;
+        background: #000;
+        position: absolute;
+        top: 50%;
+        right: 0;
+        transform: translateY(-50%);
       }
     }
     .recomment_content {
@@ -279,8 +299,9 @@
           text-align: center;
           font-weight: bold;
           font-size: 30px;
-          color: #000;
-          text-shadow: 0 2px 2px rgb(250, 183, 0);
+          color: #fff;
+          background-color: #000;
+          text-shadow: 0 3px 3px rgb(250, 183, 0);
         }
         .item_content {
           width: 20%;
@@ -288,6 +309,7 @@
           border: 1px solid #ccc;
           box-shadow: 0 4px 4px #ccc;
           border-radius: 20px;
+          cursor: pointer;
           &:hover {
             animation: show 0.3s ease-in-out;
             animation-fill-mode: forwards;
@@ -339,10 +361,10 @@
     }
   }
   .footer {
-    width: 100%;
-    // height: 300px;
-    padding: 20px 0;
-    background-color: #fff;
+    width: calc(100% - 400px);
+    padding: 10px 200px;
+    background-color: #000;
+    color: #fff;
     overflow: hidden;
     .JD_banner {
       width: 100%;
@@ -389,7 +411,7 @@
           margin-left: 10px;
           height: 50px;
           font-size: 22px;
-          color: #000;
+          color: #fff;
           font-weight: bold;
         }
       }
