--- a/src/css/personOrder.css
+++ b/src/css/personOrder.css
@@ -5,5 +5,70 @@
 .orderList .orderItem {
   width: 100%;
   padding: 20px 0;
-  border-bottom: 2px solid #ccc;
+  height: 250px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  align-items: flex-start;
+  margin-bottom: 20px;
+  border: 2px solid #ccc;
+}
+.orderList .orderItem .orderBase {
+  width: 500px;
+  padding: 0 20px;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  flex-direction: column;
+}
+.orderList .orderItem .orderBase .orderImage {
+  width: 100px;
+  height: 100px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.orderList .orderItem .orderBase .orderName {
+  width: 200px;
+  overflow: hidden;
+  font-size: 20px;
+  font-weight: bold;
+  margin-right: 30px;
+}
+.orderList .orderItem .orderBase .orderPrice {
+  font-size: 20px;
+  font-weight: bold;
+  color: #f56c6c;
+  margin-right: 30px;
+}
+.orderList .orderItem .orderBase .orderLevel {
+  font-size: 18px;
+  font-weight: bold;
+  color: #a5a5a5;
+}
+.orderList .orderItem .orderReceipt {
+  width: 30%;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  flex-direction: column;
+}
+.orderList .orderItem .orderReceipt .receiptName,
+.orderList .orderItem .orderReceipt .receiptPhone,
+.orderList .orderItem .orderReceipt .receiptAddress {
+  font-size: 16px;
+  margin-right: 30px;
+}
+.orderList .orderItem .orderTrad {
+  width: 30%;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  flex-direction: column;
+}
+.orderList .orderItem .orderTrad .el-steps {
+  width: 100%;
 }
