--- a/src/css/personOrder.less
+++ b/src/css/personOrder.less
@@ -1,10 +1,75 @@
 // 个人用户页--我的订单
 .orderList {
+  width: 100%;
+  height: 100%;
+
+  .orderItem {
     width: 100%;
-    height: 100%;
-    .orderItem {
-        width: 100%;
-        padding: 20px 0;
-        border-bottom: 2px solid #ccc;;
+    padding: 20px 0;
+    height: 250px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: flex-start;
+    margin-bottom: 20px;
+    border: 2px solid #ccc;;
+    .orderBase {
+        width: 500px;
+        padding: 0 20px;;
+        height: 100%;
+        display: flex;
+        justify-content: space-around;
+        align-items: flex-start;
+        flex-direction: column;
+        .orderImage {
+            width: 100px;
+            height: 100px;
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center;
+        }
+        .orderName {
+            width: 200px;
+            overflow: hidden;
+            font-size: 20px;
+            font-weight: bold;
+            margin-right: 30px;
+        }
+        .orderPrice {
+            font-size: 20px;
+            font-weight: bold;
+            color: #f56c6c;
+            margin-right: 30px;
+        }
+        .orderLevel {
+            font-size: 18px;
+            font-weight: bold;
+            color: #a5a5a5;
+        }
     }
+    .orderReceipt {
+        width: 30%;
+        height: 100%;
+        display: flex;
+        justify-content: space-around;
+        align-items: flex-start;
+        flex-direction: column;
+        .receiptName,.receiptPhone,.receiptAddress {
+            font-size: 16px;
+            margin-right: 30px;
+        }
+    }
+    .orderTrad {
+        width: 30%;
+        height: 100%;
+        display: flex;
+        justify-content: space-around;
+        align-items: flex-start;
+        flex-direction: column;
+        .el-steps {
+            width: 100%;
+        }
+    }
+  }
+
 }
