--- a/src/css/shopCar.less
+++ b/src/css/shopCar.less
@@ -1,279 +1,216 @@
 .topCover {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+
+  .goodList {
+    width: calc(100% - 400px);
+    min-height: calc(100% - 410px);
+    margin: 0 200px;
     background-color: #fff;
-    .topBanner {
-      width: calc(100% - 400px);
-      height: 50px;
-      background-color: rgb(37, 37, 37);
-      padding: 0 200px;
+    position: relative;
+
+    .empty {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-image: url("../assets/image/data_empty.png");
+      background-size: 300px 200px;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
+
+    .goodItem {
+      width: calc(100% - 40px);
+      padding: 20px 0 20px 40px;
+      background-color: #ffff;
+      border-bottom: 4px solid #e9e9e9;
+      position: relative;
       display: flex;
       justify-content: space-between;
-      align-items: center;
       flex-direction: row;
-      font-size: 16px;
-      color: rgb(255, 253, 253);
-      font-weight: 400;
-      cursor: pointer;
-      .topLeft {
-        height: 100%;
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        flex-direction: row;
-        .logo {
-          width: 100px;
-          height: 100%;
-          background-image: url("../assets/image/logo4.png");
-          background-size: contain;
-          background-repeat: no-repeat;
-          background-position: center;
-        }
-        .toIndex {
-          margin-left: 40px;
-          position: relative;
-          &::after {
-            content: "";
-            width: 0%;
-            height: 0px;
-            background-color: rgb(255, 255, 255);
-            position: absolute;
-            left: 50%;
-            bottom: -10px;
-            transition: all 0.2s;
-          }
-          &:hover {
-            color: rgb(255, 255, 255);
-            font-weight: 400;
-            &::after {
-              left: 0%;
-              width: 100%;
-              height: 2px;
-            }
-          }
-        }
-      }
-      .topRight {
-        height: 100%;
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        flex-direction: row;
-        .toUser {
-          width: 24px;
-          height: 24px;
-          background-image: url("../assets/image/user.png");
-          background-size: contain;
-          background-repeat: no-repeat;
-          margin: 0 40px;
-          position: relative;
-          &::after {
-            content: "";
-            width: 0%;
-            height: 0px;
-            background-color: rgb(255, 255, 255);
-            position: absolute;
-            left: 50%;
-            bottom: -10px;
-            transition: all 0.2s;
-          }
-          &:hover {
-            &::after {
-              left: 0%;
-              width: 100%;
-              height: 2px;
-            }
-          }
-        }
-        .toShopCar {
-          width: 24px;
-          height: 24px;
-          background-image: url("../assets/image/shopCar.png");
-          background-size: contain;
-          background-repeat: no-repeat;
-          position: relative;
-          &::after {
-            content: "";
-            width: 0%;
-            height: 0px;
-            background-color: rgb(255, 255, 255);
-            position: absolute;
-            left: 50%;
-            bottom: -10px;
-            transition: all 0.2s;
-          }
-          &:hover {
-            &::after {
-              left: 0%;
-              width: 100%;
-              height: 2px;
-            }
-          }
-        }
-      }
-    }
-    .goodList {
-      width: calc(100% - 400px);
-      margin: 20px 200px;
-      background-color: #f5f5f5;
-      .goodItem {
-        width: calc(100% - 80px);
-        padding: 20px 40px;
-        background-color: #ffff;
-        border-bottom: 4px solid #e9e9e9;
-        position: relative;
+      align-items: center;
+
+      .chooseBtn {
+        width: 30px;
+        height: 30px;
+        position: absolute;
+        left: 20px;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        background-image: url("../assets/image/choose.png");
+        background-size: contain;
+        background-repeat: no-repeat;
         display: flex;
         justify-content: space-between;
         flex-direction: row;
         align-items: center;
-        .chooseBtn {
-          width: 30px;
-          height: 30px;
-          position: absolute;
-          left: 20px;
-          top: 50%;
-          transform: translate(-50%, -50%);
-          background-image: url("../assets/image/choose.png");
-          background-size: contain;
-          background-repeat: no-repeat;
-          display: flex;
-          justify-content: space-between;
-          flex-direction: row;
-          align-items: center;
-          cursor: pointer;
-          &.active {
-            background-image: url("../assets/image/choose_active.png");
-          }
-        }
-        .goodInfo {
-          width: 60%;
-          height: 150px;
-          display: flex;
-          justify-content: space-around;
-          align-items: center;
-          flex-direction: row;
-          .good_img {
-            width: 180px;
-            height: 100px;
-            background-repeat: no-repeat;
-            background-size: contain;
-            background-position: center;
-          }
-          .good_name {
-            font-size: 20px;
-            font-weight: bold;
-            color: #000;
-          }
-          .good_price {
-            font-size: 20px;
-            font-weight: bold;
-            color: #000;
-          }
-        }
-        .handleArea {
-          width: 20%;
-          height: 150px;
-          display: flex;
-          flex-direction: row;
-          justify-content: space-around;
-          align-items: center;
-          .change {
-            display: block;
-            padding: 10px 20px;
-            border: 1px solid #000;
-            transition: all 0.3s;
-            cursor: pointer;
-            &:hover {
-              background-color: #000;
-              color: #fff;
-            }
-          }
-          .delete {
-            display: block;
-            padding: 10px 20px;
-            background-color: #000;
-            color: #fff;
-            transition: all 0.3s;
-            cursor: pointer;
-            &:hover {
-              background-color: rgb(44, 44, 44);
-            }
-          }
+        cursor: pointer;
+
+        &.active {
+          background-image: url("../assets/image/choose_active.png");
         }
       }
-    }
-    .settlement {
-      width: calc(100% - 440px);
-      margin: 20px 200px;
-      padding-left: 40px;
-      height: 100px;
-      background-color: #f2f2f2;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-direction: row;
-      position: relative;
-      .settleLeft {
+
+      .goodInfo {
+        height: 150px;
         display: flex;
-        justify-content: flex-start;
-        flex-direction: row;
+        justify-content: space-around;
         align-items: center;
-        .chooseBtn {
-          position: absolute;
-          width: 30px;
-          height: 30px;
-          background-image: url("../assets/image/choose.png");
-          background-size: contain;
+        flex-direction: row;
+
+        .good_img {
+          width: 180px;
+          height: 100px;
           background-repeat: no-repeat;
-          top: 50%;
-          left: 0;
-          transform: translateY(-50%);
-          cursor: pointer;
-          &.active {
-            background-image: url("../assets/image/choose_active.png");
-          }
+          background-size: contain;
+          background-position: center;
         }
-        .tips_all {
-          font-size: 16px;
+
+        .good_name {
+          font-size: 20px;
           font-weight: bold;
-          margin-right: 20px;
+          color: #000;
         }
-        .place {
-          display: block;
-          width: 2px;
-          height: 20px;
-          background-color: #525050;
-          margin-right: 20px;
-        }
-        .chooseNum {
-          font-size: 16px;
+
+        .good_price {
+          font-size: 20px;
           font-weight: bold;
+          color: #f56c6c;
+          margin-left: 30px;
+        }
+
+        .good_type {
+          font-size: 20px;
+          color: #000;
+          font-weight: bold;
+          margin-left: 30px;
         }
       }
-      .settleRight {
-        height: 100%;
+
+      .handleArea {
+        width: 20%;
+        height: 150px;
         display: flex;
-        justify-content: flex-start;
-        align-items: center;
         flex-direction: row;
-        .totalPrice {
+        justify-content: flex-end;
+        align-items: center;
+
+        .change {
           display: block;
-          padding: 0 20px;
-          font-size: 16px;
-          font-weight: bold;
-        }
-        .payBtn {
-          width: 100px;
-          padding: 10px;
-          font-weight: bold;
-          background-color: rgb(116, 116, 116);
-          color: rgb(226, 226, 226);
+          padding: 10px 20px;
+          border: 1px solid #000;
+          transition: all 0.3s;
           cursor: pointer;
-          &.active {
+
+          &:hover {
             background-color: #000;
             color: #fff;
+          }
+        }
+
+        .delete {
+          display: block;
+          padding: 10px 20px;
+          background-color: #000;
+          color: #fff;
+          transition: all 0.3s;
+          margin-left: 40px;
+          border: 1px solid #000;
+          cursor: pointer;
+
+          &:hover {
+            background-color: rgb(44, 44, 44);
           }
         }
       }
     }
   }
+
+  .settlement {
+    width: calc(100% - 440px);
+    margin: 20px 200px;
+    padding-left: 40px;
+    height: 100px;
+    background-color: #ffffff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    position: relative;
+
+    .settleLeft {
+      display: flex;
+      justify-content: flex-start;
+      flex-direction: row;
+      align-items: center;
+
+      .chooseBtn {
+        position: absolute;
+        width: 30px;
+        height: 30px;
+        background-image: url("../assets/image/choose.png");
+        background-size: contain;
+        background-repeat: no-repeat;
+        top: 50%;
+        left: 0;
+        transform: translateY(-50%);
+        cursor: pointer;
+
+        &.active {
+          background-image: url("../assets/image/choose_active.png");
+        }
+      }
+
+      .tips_all {
+        font-size: 16px;
+        font-weight: bold;
+        margin-right: 20px;
+      }
+
+      .place {
+        display: block;
+        width: 2px;
+        height: 20px;
+        background-color: #525050;
+        margin-right: 20px;
+      }
+
+      .chooseNum {
+        font-size: 16px;
+        font-weight: bold;
+      }
+    }
+
+    .settleRight {
+      height: 100%;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      flex-direction: row;
+
+      .totalPrice {
+        display: block;
+        padding: 0 20px;
+        font-size: 16px;
+        font-weight: bold;
+      }
+
+      .payBtn {
+        width: 100px;
+        padding: 10px;
+        font-weight: bold;
+        background-color: rgb(116, 116, 116);
+        color: rgb(226, 226, 226);
+        cursor: pointer;
+
+        &.active {
+          background-color: #000;
+          color: #fff;
+        }
+      }
+    }
+  }
+}
