--- a/src/css/person.less
+++ b/src/css/person.less
@@ -1,114 +1,189 @@
 .topCover {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.mainInfo {
+  width: calc(100% - 400px);
+  min-height: calc(100% - 270px);
+  padding: 0 200px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+
+  .main_banner {
     width: 100%;
-    height: 100%;
-    .topBanner {
-      width: calc(100% - 400px);
+    height: 50px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: row;
+
+    .mb_item {
+      display: block;
+      width: 120px;
       height: 50px;
-      background-color: rgb(37, 37, 37);
-      padding: 0 200px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-direction: row;
-      font-size: 16px;
-      color: rgb(255, 253, 253);
-      font-weight: 400;
+      line-height: 50px;
+      text-align: center;
+      font-size: 20px;
+      font-weight: 800;
+      position: relative;
       cursor: pointer;
-      .topLeft {
-        height: 100%;
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        flex-direction: row;
-        .logo {
-          width: 100px;
-          height: 100%;
-          background-image: url("../assets/image/logo4.png");
-          background-size: contain;
-          background-repeat: no-repeat;
-          background-position: center;
-        }
-        .toIndex {
-          margin-left: 40px;
-          position: relative;
-          &::after {
-            content: "";
-            width: 0%;
-            height: 0px;
-            background-color: rgb(255, 255, 255);
-            position: absolute;
-            left: 50%;
-            bottom: -10px;
-            transition: all 0.2s;
-          }
-          &:hover {
-            color: rgb(255, 255, 255);
-            font-weight: 400;
-            &::after {
-              left: 0%;
-              width: 100%;
-              height: 2px;
-            }
-          }
+      color: rgb(155, 155, 155);
+      transition: all 0.3s;
+
+      &::before {
+        content: "";
+        width: 0;
+        height: 0;
+        border-right: 1px;
+        background-color: #000;
+        position: absolute;
+        left: 50%;
+        bottom: 5px;
+        transition: all 0.3s;
+      }
+
+      &:hover {
+        color: #000;
+      }
+
+      &.active {
+        color: #000;
+
+        &::before {
+          width: 50%;
+          height: 2px;
+          left: 50%;
+          transform: translateX(-50%);
         }
       }
-      .topRight {
-        height: 100%;
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        flex-direction: row;
-        .toUser {
-          width: 24px;
-          height: 24px;
-          background-image: url("../assets/image/user.png");
-          background-size: contain;
-          background-repeat: no-repeat;
-          margin: 0 40px;
-          position: relative;
-          &::after {
-            content: "";
-            width: 0%;
-            height: 0px;
-            background-color: rgb(255, 255, 255);
-            position: absolute;
-            left: 50%;
-            bottom: -10px;
-            transition: all 0.2s;
-          }
-          &:hover {
-            &::after {
-              left: 0%;
-              width: 100%;
-              height: 2px;
-            }
-          }
-        }
-        .toShopCar {
-          width: 24px;
-          height: 24px;
-          background-image: url("../assets/image/shopCar.png");
-          background-size: contain;
-          background-repeat: no-repeat;
-          position: relative;
-          &::after {
-            content: "";
-            width: 0%;
-            height: 0px;
-            background-color: rgb(255, 255, 255);
-            position: absolute;
-            left: 50%;
-            bottom: -10px;
-            transition: all 0.2s;
-          }
-          &:hover {
-            &::after {
-              left: 0%;
-              width: 100%;
-              height: 2px;
-            }
-          }
+
+      &::after {
+        content: "";
+        width: 2px;
+        height: 20px;
+        background-color: rgb(110, 110, 110);
+        position: absolute;
+        right: 0;
+        top: 50%;
+        transform: translateY(-50%);
+      }
+
+      &:last-child {
+        &::after {
+          content: "";
+          width: 0;
+          height: 0;
         }
       }
     }
   }
+
+  .main_content {
+    width: calc(100% - 40px);
+    padding: 30px 20px 0;
+    background-color: #fff;
+
+    .mc_item {
+      width: 100%;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      flex-direction: row;
+
+      .tips {
+        width: 100px;
+        height: 50px;
+        line-height: 50px;
+        text-align: left;
+        font-size: 16px;
+      }
+
+      .el-input {
+        width: 400px;
+      }
+
+      .sex_img {
+        display: block;
+        width: 30px;
+        height: 30px;
+        margin-right: 20px;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+        cursor: pointer;
+
+        &.man {
+          background-image: url("../assets/image/man_base.png");
+        }
+
+        &.woman {
+          background-image: url("../assets/image/woman_base.png");
+        }
+
+        &.active {
+          &.man {
+            background-image: url("../assets/image/man_active.png");
+          }
+
+          &.woman {
+            background-image: url("../assets/image/woman_active.png");
+          }
+        }
+      }
+    }
+
+    .add_address {
+      width: 100%;
+      height: 60px;
+      line-height: 60px;
+      display: flex;
+      justify-content: space-around;
+      flex-direction: row;
+      align-items: center;
+
+      .addBtn {
+        display: block;
+        width: 120px;
+        height: 20px;
+        line-height: 20px;
+        background-color: #f89f2b;
+        padding: 10px 20px;
+        color: #fff;
+        font-size: 16px;
+        border-radius: 20px;
+        box-shadow: 0px 5px 5px #f5c88e;
+        transition: all 0.3s;
+        cursor: pointer;
+
+        &:hover {
+          transform: scale(1.1);
+          box-shadow: 0px 5px 5px #f0b262;
+        }
+      }
+    }
+  }
+}
+
+.addressInfo {
+  width: 100%;
+  height: 100%;
+
+  .newInfo {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: row;
+    margin-bottom: 20px;
+
+    .newTips {
+      display: inline-block;
+      width: 100px;
+      text-align: left;
+    }
+  }
+}
