在售结构结束

--- a/src/css/admin.css
+++ b/src/css/admin.css
@@ -25,7 +25,7 @@
   width: 100px;
   height: 50px;
   background-image: url('../assets//image/logo4.png');
-  background-size: 100% ;
+  background-size: 100%;
   background-repeat: no-repeat;
   background-position: left;
 }
@@ -89,4 +89,109 @@
 }
 .cover .mainInfo .main_content .el-pagination {
   margin: 20px;
+}
+.cover .mainInfo .main_content .saleGood {
+  width: 100%;
+  padding-top: 20px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: left;
+  flex-direction: column;
+}
+.cover .mainInfo .main_content .saleGood .el-input {
+  width: 400px;
+  margin-left: 25px;
+}
+.cover .mainInfo .main_content .saleGood .SG_List {
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  align-items: center;
+  padding-top: 20px;
+}
+.cover .mainInfo .main_content .saleGood .SG_List .SG_Item {
+  width: 21%;
+  height: 260px;
+  margin: 10px 2%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+  border-radius: 5px;
+  overflow: hidden;
+  box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
+}
+.cover .mainInfo .main_content .saleGood .SG_List .SG_Item .SG_cover {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-color: rgba(37, 37, 37, 0.9);
+  z-index: 5;
+  opacity: 0;
+  transition: all 0.3s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.cover .mainInfo .main_content .saleGood .SG_List .SG_Item .SG_cover .SG_detail {
+  width: 100px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  background-color: #67C23A;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+  margin-bottom: 20px;
+}
+.cover .mainInfo .main_content .saleGood .SG_List .SG_Item .SG_cover .SG_delete {
+  width: 100px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  background-color: #F56C6C;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+}
+.cover .mainInfo .main_content .saleGood .SG_List .SG_Item:hover .SG_cover {
+  opacity: 1;
+}
+.cover .mainInfo .main_content .saleGood .SG_List .SG_Item .SG_img {
+  width: 100%;
+  height: 200px;
+  background-color: #aaa;
+}
+.cover .mainInfo .main_content .saleGood .SG_List .SG_Item .SG_info {
+  width: calc(100% - 10px);
+  height: 60px;
+  padding: 5px;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  flex-direction: column;
+}
+.cover .mainInfo .main_content .saleGood .SG_List .SG_Item .SG_info .SG_name {
+  font-size: 16px;
+  font-weight: bold;
+  display: inline-block;
+  width: 100%;
+  overflow: hidden;
+  text-align: left;
+}
+.cover .mainInfo .main_content .saleGood .SG_List .SG_Item .SG_info .SG_price {
+  font-size: 16px;
+  color: lightcoral;
+}
+.cover .mainInfo .main_content .saleGood .SG_List .SG_Item .SG_info .SG_des {
+  display: inline-block;
+  width: 100%;
+  overflow: hidden;
+  font-size: 12px;
+  text-align: left;
 }
