--- a/src/css/admin.css
+++ b/src/css/admin.css
@@ -100,7 +100,6 @@
 }
 .cover .mainInfo .main_content .saleGood .el-input {
   width: 400px;
-  margin-left: 25px;
 }
 .cover .mainInfo .main_content .saleGood .SG_List {
   width: 100%;
@@ -194,4 +193,102 @@
   overflow: hidden;
   font-size: 12px;
   text-align: left;
+}
+.SG_dialog {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
+}
+.SG_dialog .dialog_item {
+  width: 70%;
+  height: 50px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: row;
+}
+.SG_dialog .dialog_item .DI_tips {
+  width: 150px;
+  height: 50px;
+  line-height: 50px;
+  text-align: left;
+  font-size: 16px;
+}
+.SG_dialog .dialog_item .DI_info {
+  font-size: 16px;
+  font-weight: bold;
+  overflow: hidden;
+}
+.AGcover {
+  width: 100%;
+}
+.AGcover .AG_topInfo {
+  width: 100%;
+}
+.AGcover .AG_topInfo .AG_base {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+}
+.AGcover .AG_topInfo .AG_base .AG_img {
+  width: 500px;
+  height: 300px;
+  background-color: #aaa;
+}
+.AGcover .AG_topInfo .AG_base ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  width: 500px;
+}
+.AGcover .AG_topInfo .AG_base ul li {
+  margin: 5px 0;
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: row;
+  align-items: center;
+}
+.AGcover .AG_topInfo .AG_base ul li .AGB_tips {
+  display: inline-block;
+  width: 100px;
+  height: 30px;
+  line-height: 30px;
+  font-size: 16px;
+  text-align: center;
+}
+.AGcover .AG_topInfo .AG_base ul li .AGB_content {
+  display: inline-block;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: left;
+}
+.AGcover .AG_bottomArea {
+  width: 100%;
+  height: 60px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+}
+.AGcover .AG_bottomArea span {
+  display: inline-block;
+  width: 100px;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+  padding: 5px;
+  border: 2px solid #000;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 18px;
+  transition: all 0.3s;
+}
+.AGcover .AG_bottomArea span:hover {
+  background-color: #000;
+  color: #fff;
 }
